[tool.poetry]
name = "pubmed-paper-fetcher"
version = "0.1.0"
description = "A CLI tool to fetch PubMed papers with non-academic authors."
authors = ["Your Name <your-email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pubmed_fetcher.py"}, {include = "get_papers_list.py"}]


[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.0"
pandas = "^1.4.0"
beautifulsoup4 = "^4.10.0"
lxml = "^5.3.1"

[tool.poetry.scripts]
get-papers-list = "get_papers_list:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"